# MRG-LONGPLAY-STUDIO-COMPLETE-2

./: .gitignore  CLAUDE.md  ai_dj.py  build_app.py  gui.py  hook_extractor.py  license_manager.py  longplay.spec  requirements.txt  v5.5-complete-patch.patch  verify_longplay.sh
gui/: __init__.py  main.py
gui/dialogs/: __init__.py
gui/models/: __init__.py  autosave.py
gui/timeline/: __init__.py  clip_drag.py  clip_trim.py  multi_track_timeline.py  text_layer.py
gui/utils/: __init__.py  compat.py
gui/video/: __init__.py
modules/master/: __init__.py  ai_assist.py  chain.py  dynamics.py  genre_profiles.py  limiter.py  maximizer.py  pipeline.py  rust_chain.py  ui_panel.py
modules/widgets/: loudness_history.py  rotary_knob.py  spectrum_analyzer.py  transfer_curve.py  vectorscope.py
rust/: Cargo.toml  pyproject.toml
rust/crates/longplay-chain/: Cargo.toml
rust/crates/longplay-chain/src/: lib.rs
rust/crates/longplay-python/: Cargo.toml
rust/crates/longplay-python/src/: lib.rs  master_chain.rs  types.rs
tests/: conftest.py  test_chain.py  test_dynamics.py  test_epic5_polish.py  test_equalizer.py  test_imager.py  test_limiter.py  test_loudness.py  test_maximizer.py
